refactor: reduceCoordinates가 실제로 좌표를 줄이도록 알고리즘을 재배치
reduceCoordinates()라는 이름의 메소드가 정작 다운샘플링 코드를 한 줄도
갖고 있지 않고, RoutePath.from()(값객체 정적 팩토리) 안에 3단계나 더 파고들어야
"어떻게 줄이는지"가 나오는 문제가 있었다. 이름이 약속하는 동작과 실제 위치가
어긋난 상태였다.

- RoutePath.from(sections, totalDistanceMeters) 제거 — 원본 파싱(collect)과
  다운샘플링(targetPointCount/downsample) 로직을 통째로 새 클래스
  RouteCoordinateReductionService로 옮김
- RoutePath는 이미 축소된 points/trafficStates를 받아 감싸기만 하는
  순수 값객체로 축소 (RoutePath.of(points, trafficStates))
- RouteRestStopService.reduceCoordinates()는 이제
  routeCoordinateReductionService::reduce 한 번만 위임한다 — 위임 대상 이름이
  똑같이 "reduce"라서, matchRestStopsByDirection()이 RouteRestStopMatchingService에
  위임하는 것과 동일하게 "이름과 실제 위치가 일치하는" 정직한 한 단계 위임이 됐다

RoutePathTest의 다운샘플링 테스트는 RouteCoordinateReductionServiceTest로 옮기고,
RoutePathTest는 이미 축소된 좌표에 대한 근접·방향 계산만 검증하도록 좁혔다.
전체 스위트 통과 확인.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>